Adding Mining Calculator
Adding Mining Calculator Support

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "Все още не сте добавили ангажимент",
   "network": "Мрежа",
   "multiple_recipients": "Няколко получатели",
-  "self": "себе си"
+  "self": "себе си",
+  "mining_calculator": "Минен калкулатор",
+  "avg_network_commitment": "Среден ангажимент към мрежата",
+  "calculated_burst_day_estimate": "Прогнозни приходи",
+  "lease_balance": "Баланс на лизинг",
+  "lease_balance_help": "Броят на блоковете под наем ще продължи. 9000 блока е около 10 дни.",
+  "lease_balance_help_2": "Наем от 9000 блока е около 10 дни.",
+  "lease_balance_help_var": "Наемът на __blocks__ блокове е около __days__ дни.",
+  "lease_balance_to_account": "Отдайте под наем баланса си на друга сметка.",
+  "lease_balance_warning": "Запомнете: Веднъж изпратен лизингът не може да бъде отменен.",
+  "lease_your_balance": "Наемете баланса си",
+  "leased_out": "Отдаден под наем",
+  "leased_soon": "Наета скоро",
+  "new_message": "Ново съобщение",
+  "search": "Търсене",
+  "search_or_start_message": "Търсене или стартиране на ново съобщение",
+  "select_commitment_per_tb": "Задайте коефициент на ангажираност",
+  "select_plot_size": "Задайте размер на парцела",
+  "total_burst_needed": "Обща сума на ангажимента"
 }
