--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "Encara no teniu cap compromís afegit",
   "network": "Xarxa",
   "multiple_recipients": "Destinataris múltiples",
-  "self": "jo"
+  "self": "jo",
+  "mining_calculator": "Calculadora de mines",
+  "avg_network_commitment": "Compromís mitjà de la xarxa",
+  "calculated_burst_day_estimate": "Guanys estimats",
+  "lease_balance": "Saldo d’arrendament",
+  "lease_balance_help": "El nombre de blocs que durarà l’arrendament. 9000 blocs són aproximadament 10 dies.",
+  "lease_balance_help_2": "Un contracte d’arrendament de 9.000 blocs és d’uns 10 dies.",
+  "lease_balance_help_var": "Un contracte d'arrendament de __blocs__ blocs dura aproximadament __days__ dies.",
+  "lease_balance_to_account": "Arrendeu el vostre saldo a un altre compte.",
+  "lease_balance_warning": "Recordeu: un cop presentat l’arrendament no es pot cancel·lar.",
+  "lease_your_balance": "Arrendeu el vostre saldo",
+  "leased_out": "Arrendat",
+  "leased_soon": "Arrendat aviat",
+  "new_message": "Nou missatge",
+  "search": "Cerca",
+  "search_or_start_message": "Cerqueu o inicieu un missatge nou",
+  "select_commitment_per_tb": "Estableix la proporció de compromís",
+  "select_plot_size": "Estableix la mida de la parcel·la",
+  "total_burst_needed": "Import total del compromís"
 }
