--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "Zatím nemáte přidán žádný závazek",
   "network": "Síť",
   "multiple_recipients": "Více příjemců",
-  "self": "já"
+  "self": "já",
+  "mining_calculator": "Těžařská kalkulačka",
+  "avg_network_commitment": "Průměrný závazek sítě",
+  "calculated_burst_day_estimate": "Odhadované výdělky",
+  "lease_balance": "Zůstatek nájmu",
+  "lease_balance_help": "Počet bloků zapůjčení bude trvat. 9000 bloků je asi 10 dní.",
+  "lease_balance_help_2": "Pronájem 9 000 bloků je přibližně 10 dní.",
+  "lease_balance_help_var": "Pronájem bloků __blocks__ je asi __days__ dnů.",
+  "lease_balance_to_account": "Pronajměte svůj zůstatek na jiný účet.",
+  "lease_balance_warning": "Pamatujte: Po odeslání nelze nájem zrušit.",
+  "lease_your_balance": "Pronajměte si svůj zůstatek",
+  "leased_out": "Pronajatý",
+  "leased_soon": "Pronajato brzy",
+  "new_message": "Nová zpráva",
+  "search": "Vyhledávání",
+  "search_or_start_message": "Vyhledejte nebo spusťte novou zprávu",
+  "select_commitment_per_tb": "Nastavit poměr závazků",
+  "select_plot_size": "Nastavte velikost grafu",
+  "total_burst_needed": "Celková výše závazku"
 }
