--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "Sie haben noch keinen Einsatz hinzugefügt",
   "network": "Netzwerk",
   "multiple_recipients": "Mehrere Empfänger",
-  "self": "selbst"
+  "self": "selbst",
+  "mining_calculator": "Bergbau-Rechner",
+  "avg_network_commitment": "Durchschnittliches Netzwerk-Commitment",
+  "calculated_burst_day_estimate": "Geschätzter Gewinn",
+  "lease_balance": "Leasingbilanz",
+  "lease_balance_help": "Die Anzahl der Blöcke, für die der Mietvertrag gültig ist. 9000 Blöcke sind ungefähr 10 Tage.",
+  "lease_balance_help_2": "Ein Mietvertrag von 9000 Blöcken beträgt ca. 10 Tage.",
+  "lease_balance_help_var": "Ein Mietvertrag für __blocks__ Blöcke dauert ungefähr __days__ Tage.",
+  "lease_balance_to_account": "Leasing Ihr Guthaben auf ein anderes Konto.",
+  "lease_balance_warning": "Denken Sie daran: Nach der Übermittlung kann der Mietvertrag nicht mehr gekündigt werden.",
+  "lease_your_balance": "Leasing dein Guthaben",
+  "leased_out": "Vermietet",
+  "leased_soon": "Bald vermietet",
+  "new_message": "Neue Nachricht",
+  "search": "Suche",
+  "search_or_start_message": "Suche oder starte eine neue Nachricht",
+  "select_commitment_per_tb": "Commitment Ratio festlegen",
+  "select_plot_size": "Plotgröße einstellen",
+  "total_burst_needed": "Gesamter Verpflichtungsbetrag"
 }
