--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "Δεν έχετε προσθέσει ακόμη δέσμευση",
   "network": "Δίκτυο",
   "multiple_recipients": "Πολλοί παραλήπτες",
-  "self": "εαυτός"
+  "self": "εαυτός",
+  "mining_calculator": "Υπολογιστής μεταλλείων",
+  "avg_network_commitment": "Μέση δέσμευση δικτύου",
+  "calculated_burst_day_estimate": "εκτιμώμενα κέρδη",
+  "lease_balance": "Υπόλοιπο μισθώσεων",
+  "lease_balance_help": "Ο αριθμός των μπλοκ της μίσθωσης θα διαρκέσει. 9000 μπλοκ είναι περίπου 10 ημέρες.",
+  "lease_balance_help_2": "Μίσθωση 9000 τετραγώνων είναι περίπου 10 ημέρες.",
+  "lease_balance_help_var": "Η μίσθωση __blocks__ block είναι περίπου __days__ ημέρες.",
+  "lease_balance_to_account": "Μίσθωση υπολοίπου σε άλλον λογαριασμό.",
+  "lease_balance_warning": "Θυμηθείτε: Μόλις υποβληθεί η μίσθωση δεν μπορεί να ακυρωθεί.",
+  "lease_your_balance": "Μίσθωση του υπολοίπου σας",
+  "leased_out": "Μισθωμένο",
+  "leased_soon": "Μίσθωσε σύντομα",
+  "new_message": "Νέο μήνυμα",
+  "search": "Αναζήτηση",
+  "search_or_start_message": "Αναζήτηση ή έναρξη νέου μηνύματος",
+  "select_commitment_per_tb": "Ορισμός αναλογίας δέσμευσης",
+  "select_plot_size": "Ορίστε το μέγεθος του οικοπέδου",
+  "total_burst_needed": "Συνολικό ποσό ανάληψης υποχρεώσεων"
 }
