--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "Aún no has añadido ningún compromiso",
   "network": "La red",
   "multiple_recipients": "Destinatarios múltiples",
-  "self": "uno mismo"
+  "self": "uno mismo",
+  "mining_calculator": "Calculadora de minería",
+  "avg_network_commitment": "Compromiso de red promedio",
+  "calculated_burst_day_estimate": "Ganancias estimadas",
+  "lease_balance": "Saldo de arrendamiento",
+  "lease_balance_help": "El número de bloques que durará el arrendamiento. 9000 bloques son aproximadamente 10 días.",
+  "lease_balance_help_2": "Un arrendamiento de 9000 bloques es de unos 10 días.",
+  "lease_balance_help_var": "Un arrendamiento de __bloques__ bloques es de aproximadamente __ días__ días.",
+  "lease_balance_to_account": "Alquile su saldo a otra cuenta.",
+  "lease_balance_warning": "Recuerde: una vez enviado, el contrato de arrendamiento no se puede cancelar.",
+  "lease_your_balance": "Alquile su saldo",
+  "leased_out": "Arrendado, alquilado",
+  "leased_soon": "Arrendado pronto",
+  "new_message": "Nuevo mensaje",
+  "search": "Buscar",
+  "search_or_start_message": "Buscar o iniciar un mensaje nuevo",
+  "select_commitment_per_tb": "Establecer proporción de compromiso",
+  "select_plot_size": "Establecer tamaño de parcela",
+  "total_burst_needed": "Importe total del compromiso"
 }
