--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "Sinulle ei ole vielä lisätty sitoumusta",
   "network": "Verkko",
   "multiple_recipients": "Useita vastaanottajia",
-  "self": "itse"
+  "self": "itse",
+  "mining_calculator": "Kaivoslaskuri",
+  "avg_network_commitment": "Keskimääräinen verkon sitoutuminen",
+  "calculated_burst_day_estimate": "arvioidut ansiot",
+  "lease_balance": "Vuokrasaldo",
+  "lease_balance_help": "Vuokrasopimuksen kesto. 9000 lohkoa on noin 10 päivää.",
+  "lease_balance_help_2": "9000 korttelin vuokrasopimus on noin 10 päivää.",
+  "lease_balance_help_var": "__Blocks__-lohkojen vuokrasopimus on noin __days__ päivää.",
+  "lease_balance_to_account": "Vuokraa saldosi toiselle tilille.",
+  "lease_balance_warning": "Muista: Vuokrasopimusta ei voi peruuttaa, kun se on lähetetty.",
+  "lease_your_balance": "Vuokraa saldosi",
+  "leased_out": "Vuokrattu",
+  "leased_soon": "Vuokrattu pian",
+  "new_message": "Uusi viesti",
+  "search": "Hae",
+  "search_or_start_message": "Etsi tai aloita uusi viesti",
+  "select_commitment_per_tb": "Aseta sitoutumissuhde",
+  "select_plot_size": "Aseta tontin koko",
+  "total_burst_needed": "Maksusitoumusmäärä yhteensä"
 }
