--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "Vous n'avez pas encore d'engagement ajouté",
   "network": "Réseau",
   "multiple_recipients": "Destinataires multiples",
-  "self": "soi"
+  "self": "soi",
+  "mining_calculator": "Calculatrice minière",
+  "avg_network_commitment": "Engagement moyen du réseau",
+  "calculated_burst_day_estimate": "Les revenus estimés",
+  "lease_balance": "Solde du bail",
+  "lease_balance_help": "Le nombre de blocs que durera le bail. 9000 blocs représentent environ 10 jours.",
+  "lease_balance_help_2": "Un bail de 9000 blocs est d'environ 10 jours.",
+  "lease_balance_help_var": "Un bail de __blocks__ blocs dure environ __days__ jours.",
+  "lease_balance_to_account": "Louez votre solde sur un autre compte.",
+  "lease_balance_warning": "N'oubliez pas: une fois soumis, le bail ne peut être annulé.",
+  "lease_your_balance": "Louez votre solde",
+  "leased_out": "Loué",
+  "leased_soon": "Loué bientôt",
+  "new_message": "Nouveau message",
+  "search": "Rechercher",
+  "search_or_start_message": "Rechercher ou démarrer un nouveau message",
+  "select_commitment_per_tb": "Définir le ratio d'engagement",
+  "select_plot_size": "Définir la taille du tracé",
+  "total_burst_needed": "Montant total de l'engagement"
 }
