--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "Aínda non engadiches ningún compromiso",
   "network": "Rede",
   "multiple_recipients": "Varios destinatarios",
-  "self": "eu"
+  "self": "eu",
+  "mining_calculator": "Calculadora de minas",
+  "avg_network_commitment": "Compromiso medio da rede",
+  "calculated_burst_day_estimate": "Beneficios estimados",
+  "lease_balance": "Saldo de arrendamento",
+  "lease_balance_help": "O número de bloques que durará o contrato de arrendamento. 9000 bloques son aproximadamente 10 días.",
+  "lease_balance_help_2": "Un contrato de arrendamento de 9000 bloques é de aproximadamente 10 días.",
+  "lease_balance_help_var": "Un contrato de arrendamento de __blocks__ bloques é de aproximadamente __days__ días.",
+  "lease_balance_to_account": "Aluga o teu saldo a outra conta.",
+  "lease_balance_warning": "Lembre: unha vez enviado o contrato de arrendamento non se pode cancelar.",
+  "lease_your_balance": "Aluga o teu saldo",
+  "leased_out": "Arrendado fóra",
+  "leased_soon": "Arrendado en breve",
+  "new_message": "Nova mensaxe",
+  "search": "Buscar",
+  "search_or_start_message": "Busca ou inicia unha nova mensaxe",
+  "select_commitment_per_tb": "Establecer a relación de compromiso",
+  "select_plot_size": "Establecer o tamaño da parcela",
+  "total_burst_needed": "Importe total do compromiso"
 }
