--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "आपकी अभी तक कोई प्रतिबद्धता नहीं है",
   "network": "नेटवर्क",
   "multiple_recipients": "एकाधिक प्राप्तकर्ता",
-  "self": "स्वयं"
+  "self": "स्वयं",
+  "mining_calculator": "खनन कैलकुलेटर",
+  "avg_network_commitment": "औसत नेटवर्क प्रतिबद्धता",
+  "calculated_burst_day_estimate": "अनुमानित आय",
+  "lease_balance": "लीज बैलेंस",
+  "lease_balance_help": "पट्टे पर ब्लॉक की संख्या पिछले जाएगा। 9000 ब्लॉक लगभग 10 दिन हैं।",
+  "lease_balance_help_2": "9000 ब्लॉकों का पट्टा लगभग 10 दिनों का है।",
+  "lease_balance_help_var": "__Blocks__ ब्लॉक का एक पट्टा __days__ दिनों के बारे में है।",
+  "lease_balance_to_account": "अपना शेष राशि दूसरे खाते में जमा करें।",
+  "lease_balance_warning": "याद रखें: एक बार पट्टा जमा करने के बाद रद्द नहीं किया जा सकता",
+  "lease_your_balance": "अपना संतुलन बनाए रखें",
+  "leased_out": "पट्टे पर देना",
+  "leased_soon": "जल्द ही खो दिया",
+  "new_message": "नया संदेश",
+  "search": "खोज",
+  "search_or_start_message": "नया संदेश खोजें या शुरू करें",
+  "select_commitment_per_tb": "प्रतिबद्धता अनुपात निर्धारित करें",
+  "select_plot_size": "प्लॉट का आकार निर्धारित करें",
+  "total_burst_needed": "कुल प्रतिबद्धता राशि"
 }
