--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "Još niste dodali obvezu",
   "network": "Mreža",
   "multiple_recipients": "Više primatelja",
-  "self": "sebe"
+  "self": "sebe",
+  "mining_calculator": "Rudarski kalkulator",
+  "avg_network_commitment": "Prosječna predanost mreži",
+  "calculated_burst_day_estimate": "Procijenjena zarada",
+  "lease_balance": "Stanje najma",
+  "lease_balance_help": "Broj blokova najma će trajati. 9000 blokova je oko 10 dana.",
+  "lease_balance_help_2": "Zakup 9000 blokova traje oko 10 dana.",
+  "lease_balance_help_var": "Zakup __blocks__ blokova traje oko __dana__ dana.",
+  "lease_balance_to_account": "Zakupite svoj saldo na drugi račun.",
+  "lease_balance_warning": "Zapamtite: Jednom predani zakup se ne može otkazati.",
+  "lease_your_balance": "Zakupite svoj saldo",
+  "leased_out": "Zakupljeno",
+  "leased_soon": "Uskoro u najmu",
+  "new_message": "Nova poruka",
+  "search": "traži",
+  "search_or_start_message": "Pretražite ili započnite novu poruku",
+  "select_commitment_per_tb": "Postavite omjer predanosti",
+  "select_plot_size": "Postavite veličinu parcele",
+  "total_burst_needed": "Ukupni iznos obveze"
 }
