--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "Anda belum menambahkan komitmen",
   "network": "Jaringan",
   "multiple_recipients": "Beberapa Penerima",
-  "self": "diri"
+  "self": "diri",
+  "mining_calculator": "Kalkulator Penambangan",
+  "avg_network_commitment": "Komitmen Jaringan Rata-rata",
+  "calculated_burst_day_estimate": "Perkiraan pendapatan",
+  "lease_balance": "Saldo Sewa",
+  "lease_balance_help": "Jumlah blok yang akan disewa akan bertahan. 9000 blok adalah sekitar 10 hari.",
+  "lease_balance_help_2": "Sewa 9000 blok membutuhkan waktu sekitar 10 hari.",
+  "lease_balance_help_var": "Sewa __blocks__ blok adalah sekitar __days__ hari.",
+  "lease_balance_to_account": "Sewa saldo Anda ke akun lain.",
+  "lease_balance_warning": "Ingat: Setelah diajukan, sewa tidak dapat dibatalkan.",
+  "lease_your_balance": "Sewa Saldo Anda",
+  "leased_out": "Disewakan",
+  "leased_soon": "Segera Disewakan",
+  "new_message": "Pesan baru",
+  "search": "Cari",
+  "search_or_start_message": "Cari atau mulai pesan baru",
+  "select_commitment_per_tb": "Tetapkan Rasio Komitmen",
+  "select_plot_size": "Tetapkan Ukuran Plot",
+  "total_burst_needed": "Jumlah Komitmen Total"
 }
