--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "Non hai ancora alcun impegno aggiunto",
   "network": "Rete",
   "multiple_recipients": "Più destinatari",
-  "self": "se stesso"
+  "self": "se stesso",
+  "mining_calculator": "Calcolatrice mineraria",
+  "avg_network_commitment": "Impegno di rete medio",
+  "calculated_burst_day_estimate": "Guadagni stimati",
+  "lease_balance": "Saldo del contratto di locazione",
+  "lease_balance_help": "Il numero di blocchi che durerà il contratto di locazione. 9000 blocchi sono circa 10 giorni.",
+  "lease_balance_help_2": "Un contratto di locazione di 9000 blocchi è di circa 10 giorni.",
+  "lease_balance_help_var": "Un lease di __blocks__ blocchi dura circa __days__ giorni.",
+  "lease_balance_to_account": "Affitta il tuo saldo a un altro account.",
+  "lease_balance_warning": "Ricorda: una volta inviato, il contratto di locazione non può essere annullato.",
+  "lease_your_balance": "Affitta il tuo saldo",
+  "leased_out": "Affittato",
+  "leased_soon": "Locato a breve",
+  "new_message": "Nuovo messaggio",
+  "search": "Ricerca",
+  "search_or_start_message": "Cerca o inizia un nuovo messaggio",
+  "select_commitment_per_tb": "Imposta rapporto impegno",
+  "select_plot_size": "Imposta dimensioni plottaggio",
+  "total_burst_needed": "Importo totale dell'impegno"
 }
