--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "コミットメントはまだ追加されていません",
   "network": "通信網",
   "multiple_recipients": "複数の受信者",
-  "self": "自己"
+  "self": "自己",
+  "mining_calculator": "マイニング計算機",
+  "avg_network_commitment": "平均ネットワークコミットメント",
+  "calculated_burst_day_estimate": "推定収益額",
+  "lease_balance": "リース残高",
+  "lease_balance_help": "リースが続くブロックの数。 9000ブロックは約10日です。",
+  "lease_balance_help_2": "9000ブロックのリースは約10日です。",
+  "lease_balance_help_var": "__blocks__ブロックのリースは約__days__日です。",
+  "lease_balance_to_account": "残高を別のアカウントにリースします。",
+  "lease_balance_warning": "注意：一度提出すると、リースをキャンセルすることはできません。",
+  "lease_your_balance": "バランスを借りる",
+  "leased_out": "リースアウト",
+  "leased_soon": "すぐにリース",
+  "new_message": "新しいメッセージ",
+  "search": "探す",
+  "search_or_start_message": "新しいメッセージを検索または開始する",
+  "select_commitment_per_tb": "コミットメント率の設定",
+  "select_plot_size": "プロットサイズを設定する",
+  "total_burst_needed": "総コミットメント額"
 }
