--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "Dar neturite jokių įsipareigojimų",
   "network": "Tinklas",
   "multiple_recipients": "Keli gavėjai",
-  "self": "savarankiškai"
+  "self": "savarankiškai",
+  "mining_calculator": "Kasybos skaičiuoklė",
+  "avg_network_commitment": "Vidutinis tinklo įsipareigojimas",
+  "calculated_burst_day_estimate": "Apskaičiuotas uždarbis",
+  "lease_balance": "Nuomos likutis",
+  "lease_balance_help": "Nuomos trukmių skaičius. 9000 blokų yra apie 10 dienų.",
+  "lease_balance_help_2": "9000 blokų nuoma yra apie 10 dienų.",
+  "lease_balance_help_var": "„__Blocks__“ blokų nuoma yra apie __days__ dienas.",
+  "lease_balance_to_account": "Nuomokite balansą į kitą sąskaitą.",
+  "lease_balance_warning": "Nepamirškite: Pateikus nuomos sutartį atšaukti negalima.",
+  "lease_your_balance": "Nuomokite savo likutį",
+  "leased_out": "Išnuomotas",
+  "leased_soon": "Netrukus išnuomota",
+  "new_message": "Nauja žinutė",
+  "search": "Paieška",
+  "search_or_start_message": "Ieškokite arba pradėkite naują pranešimą",
+  "select_commitment_per_tb": "Nustatyti įsipareigojimų santykį",
+  "select_plot_size": "Nustatykite sklypo dydį",
+  "total_burst_needed": "Bendra įsipareigojimų suma"
 }
