--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "U heeft nog geen toezegging toegevoegd",
   "network": "Netwerk",
   "multiple_recipients": "Meerdere ontvangers",
-  "self": "zelf"
+  "self": "zelf",
+  "mining_calculator": "Mijnbouwcalculator",
+  "avg_network_commitment": "Gemiddelde netwerkverbintenis",
+  "calculated_burst_day_estimate": "Geschatte inkomsten",
+  "lease_balance": "Lease saldo",
+  "lease_balance_help": "Het aantal blokken dat de lease zal duren. 9000 blokken is ongeveer 10 dagen.",
+  "lease_balance_help_2": "Een huurovereenkomst van 9000 blokken is ongeveer 10 dagen.",
+  "lease_balance_help_var": "Een lease van __blocks__ blokken is ongeveer __days__ dagen.",
+  "lease_balance_to_account": "Huur uw saldo op een andere rekening.",
+  "lease_balance_warning": "Onthoud: eenmaal ingediend kan de huurovereenkomst niet worden geannuleerd.",
+  "lease_your_balance": "Uw saldo leasen",
+  "leased_out": "Verhuurd",
+  "leased_soon": "Binnenkort verhuurd",
+  "new_message": "Nieuw bericht",
+  "search": "Zoeken",
+  "search_or_start_message": "Zoek of start een nieuw bericht",
+  "select_commitment_per_tb": "Stel de commitment-ratio in",
+  "select_plot_size": "Stel de perceelsgrootte in",
+  "total_burst_needed": "Totaal vastleggingsbedrag"
 }
