--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "Nu ați adăugat încă niciun angajament",
   "network": "Reţea",
   "multiple_recipients": "Destinatari multipli",
-  "self": "de sine"
+  "self": "de sine",
+  "mining_calculator": "Calculator de minerit",
+  "avg_network_commitment": "Angajament mediu de rețea",
+  "calculated_burst_day_estimate": "Venituri estimate",
+  "lease_balance": "Soldul leasingului",
+  "lease_balance_help": "Numărul de blocuri de leasing va dura. 9000 blocuri este de aproximativ 10 zile.",
+  "lease_balance_help_2": "O închiriere de 9000 blocuri este de aproximativ 10 zile.",
+  "lease_balance_help_var": "O închiriere de __blocuri__ blocuri este de aproximativ __ zile__ zile.",
+  "lease_balance_to_account": "Închiriați soldul în alt cont.",
+  "lease_balance_warning": "Amintiți-vă: Odată prezentat contractul de închiriere nu poate fi anulat.",
+  "lease_your_balance": "Închiriați-vă soldul",
+  "leased_out": "Închiriat",
+  "leased_soon": "Închiriat în curând",
+  "new_message": "Mesaj nou",
+  "search": "Căutare",
+  "search_or_start_message": "Căutați sau începeți un mesaj nou",
+  "select_commitment_per_tb": "Setați raportul de angajament",
+  "select_plot_size": "Setați dimensiunea parcelei",
+  "total_burst_needed": "Suma totală a angajamentului"
 }
