--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "У вас еще нет добавленных обязательств",
   "network": "Сеть",
   "multiple_recipients": "Несколько получателей",
-  "self": "себя"
+  "self": "себя",
+  "mining_calculator": "Калькулятор майнинга",
+  "avg_network_commitment": "Среднее сетевое обязательство",
+  "calculated_burst_day_estimate": "Расчетный доход",
+  "lease_balance": "Остаток по аренде",
+  "lease_balance_help": "Количество блоков, на которые продлится аренда. 9000 блоков - это около 10 дней.",
+  "lease_balance_help_2": "Аренда 9000 блоков - около 10 дней.",
+  "lease_balance_help_var": "Срок аренды блоков __blocks__ составляет около __days__ дней.",
+  "lease_balance_to_account": "Сдайте свой баланс другой учетной записи.",
+  "lease_balance_warning": "Помните: после отправки договор аренды не может быть отменен.",
+  "lease_your_balance": "Сдай свой баланс",
+  "leased_out": "Сдан в аренду",
+  "leased_soon": "Сдан в ближайшее время",
+  "new_message": "Новое сообщение",
+  "search": "Поиск",
+  "search_or_start_message": "Найдите или начните новое сообщение",
+  "select_commitment_per_tb": "Установить коэффициент приверженности",
+  "select_plot_size": "Установить размер участка",
+  "total_burst_needed": "Общая сумма обязательств"
 }
