--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "Zatiaľ nemáte pridaný žiadny záväzok",
   "network": "Sieť",
   "multiple_recipients": "Viac príjemcov",
-  "self": "ja"
+  "self": "ja",
+  "mining_calculator": "Ťažobná kalkulačka",
+  "avg_network_commitment": "Priemerný záväzok k sieti",
+  "calculated_burst_day_estimate": "Odhadované zisky",
+  "lease_balance": "Zostatok nájmu",
+  "lease_balance_help": "Počet blokov prenájmu bude trvať. 9000 blokov je asi 10 dní.",
+  "lease_balance_help_2": "Prenájom 9000 blokov je približne 10 dní.",
+  "lease_balance_help_var": "Prenájom blokov __blokov__ je asi __days__ dní.",
+  "lease_balance_to_account": "Prenajmite svoj zostatok na inom účte.",
+  "lease_balance_warning": "Pamätajte: Po podpísaní zmluvy nie je možné zmluvu zrušiť.",
+  "lease_your_balance": "Zapožičajte si zostatok",
+  "leased_out": "Prenajatý",
+  "leased_soon": "Prenajatý čoskoro",
+  "new_message": "Nová správa",
+  "search": "Vyhľadávanie",
+  "search_or_start_message": "Vyhľadajte alebo začnite novú správu",
+  "select_commitment_per_tb": "Nastaviť pomer záväzkov",
+  "select_plot_size": "Nastavte veľkosť grafu",
+  "total_burst_needed": "Celková suma záväzku"
 }
