--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "Још увек нисте додали обавезу",
   "network": "Мрежа",
   "multiple_recipients": "Више прималаца",
-  "self": "себе"
+  "self": "себе",
+  "mining_calculator": "Рударски калкулатор",
+  "avg_network_commitment": "Просечна преданост мрежи",
+  "calculated_burst_day_estimate": "Процењена зарада",
+  "lease_balance": "Стање закупа",
+  "lease_balance_help": "Број блокова закупа ће трајати. 9000 блокова је око 10 дана.",
+  "lease_balance_help_2": "Закуп 9000 блокова је око 10 дана.",
+  "lease_balance_help_var": "Закуп __блоцкс__ блокова траје око __дана__ дана.",
+  "lease_balance_to_account": "Закупите стање на другом рачуну.",
+  "lease_balance_warning": "Запамтите: Једном предати закуп се не може отказати.",
+  "lease_your_balance": "Закупите свој биланс",
+  "leased_out": "Закупљено",
+  "leased_soon": "Ускоро изнајмљено",
+  "new_message": "Нова порука",
+  "search": "Претрага",
+  "search_or_start_message": "Претражите или започните нову поруку",
+  "select_commitment_per_tb": "Подесите однос обавеза",
+  "select_plot_size": "Подесите величину парцеле",
+  "total_burst_needed": "Укупан износ обавеза"
 }
