--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "Henüz taahhüt eklemediniz",
   "network": "Ağ",
   "multiple_recipients": "Birden Fazla Alıcı",
-  "self": "kendini"
+  "self": "kendini",
+  "mining_calculator": "Madencilik Hesaplayıcı",
+  "avg_network_commitment": "Ortalama Ağ Taahhüdü",
+  "calculated_burst_day_estimate": "Tahmini Kazanç",
+  "lease_balance": "Kira Bakiyesi",
+  "lease_balance_help": "Kiralamanın devam edeceği blok sayısı. 9000 blok yaklaşık 10 gündür.",
+  "lease_balance_help_2": "9000 blokluk bir kiralama yaklaşık 10 gündür.",
+  "lease_balance_help_var": "__Blocks__ blokların kiralanması yaklaşık __days__ gündür.",
+  "lease_balance_to_account": "Bakiyenizi başka bir hesaba kiralayın.",
+  "lease_balance_warning": "Unutmayın: Kira kontratı gönderildikten sonra iptal edilemez.",
+  "lease_your_balance": "Bakiyenizi Kiralayın",
+  "leased_out": "Kiraya verildi",
+  "leased_soon": "Yakında Kiralanacak",
+  "new_message": "Yeni Mesaj",
+  "search": "Arama",
+  "search_or_start_message": "Yeni mesaj arayın veya başlayın",
+  "select_commitment_per_tb": "Taahhüt Oranını Ayarla",
+  "select_plot_size": "Arsa Büyüklüğünü Ayarla",
+  "total_burst_needed": "Toplam Taahhüt Tutarı"
 }
