--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "Ви ще не додали жодного зобов’язання",
   "network": "Мережа",
   "multiple_recipients": "Кілька одержувачів",
-  "self": "себе"
+  "self": "себе",
+  "mining_calculator": "Гірничий калькулятор",
+  "avg_network_commitment": "Середнє зобов’язання мережі",
+  "calculated_burst_day_estimate": "Орієнтовний прибуток",
+  "lease_balance": "Баланс оренди",
+  "lease_balance_help": "Кількість блоків оренди триватиме. 9000 блоків - це близько 10 днів.",
+  "lease_balance_help_2": "Оренда 9000 блоків становить близько 10 днів.",
+  "lease_balance_help_var": "Оренда __blocks__ блоків становить близько __days__ днів.",
+  "lease_balance_to_account": "Здайте баланс на інший рахунок.",
+  "lease_balance_warning": "Пам'ятайте: після подання договору оренди не можна скасувати.",
+  "lease_your_balance": "Орендуйте баланс",
+  "leased_out": "Орендований",
+  "leased_soon": "Скоро орендований",
+  "new_message": "Нове повідомлення",
+  "search": "Пошук",
+  "search_or_start_message": "Шукати або розпочати нове повідомлення",
+  "select_commitment_per_tb": "Встановити коефіцієнт зобов'язань",
+  "select_plot_size": "Встановити розмір ділянки",
+  "total_burst_needed": "Загальна сума зобов'язань"
 }
