--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -1058,5 +1058,23 @@
   "commitment_zero_balance": "您尚未添加任何承诺",
   "network": "网络",
   "multiple_recipients": "多个收件人",
-  "self": "自己"
+  "self": "自己",
+  "mining_calculator": "采矿计算器",
+  "avg_network_commitment": "平均网络承诺",
+  "calculated_burst_day_estimate": "预估收益",
+  "lease_balance": "租赁余额",
+  "lease_balance_help": "租约将持续的块数。 9000块大约是10天。",
+  "lease_balance_help_2": "9000个区块的租约大约需要10天。",
+  "lease_balance_help_var": "__blocks__个区块的租赁期约为__days__天。",
+  "lease_balance_to_account": "将您的余额出租到另一个帐户。",
+  "lease_balance_warning": "切记：租约一旦提交便无法取消。",
+  "lease_your_balance": "租赁您的余额",
+  "leased_out": "租出去",
+  "leased_soon": "即将出租",
+  "new_message": "新消息",
+  "search": "搜索",
+  "search_or_start_message": "搜索或开始新消息",
+  "select_commitment_per_tb": "设定承诺率",
+  "select_plot_size": "设置图大小",
+  "total_burst_needed": "承诺总额"
 }
